--- a/view/style/style.css
+++ b/view/style/style.css
@@ -26,6 +26,9 @@ body {
     margin: 0;
     padding: 0;
 }
+textarea{
+    max-height: 200px;
+}
 #password-strength-status {
     font-size: 14px;
     margin-top: 5px;
@@ -190,11 +193,7 @@ body {
     max-height: calc(100vh - 70px);
 }
 
-.edit-items-column{
-    margin: 0;
-    overflow-x: auto;
-    max-height: cal(100vh-70px) !important;
-}
+
 .items-list-row{
     overflow-x: auto;
     max-height: 750px;
@@ -206,23 +205,24 @@ body {
     margin-top: 20px;
 }
 
-#add-item-form .input-group ,#edit-food-items-form .input-group{
+#add-item-form .input-group ,#edit-food-items-form .input-group ,#add-ingredients-form .input-group,#edit-ingredients-form .input-group{
     margin:5px;
 }
-#add-item-form .input-group-prepend  ,#edit-food-items-form .input-group-prepend{
+#add-item-form .input-group-prepend  ,#edit-food-items-form .input-group-prepend ,#add-ingredients-form .input-group-prepend,#edit-ingredients-form .input-group-prepend{
     width:175px;
 }
-#add-item-form .input-group-prepend-img  ,#edit-food-items-form .input-group-prepend-img{
+#add-item-form .input-group-prepend-img  ,#edit-food-items-form .input-group-prepend-img,#add-ingredients-form .input-group-prepend-img,#edit-ingredients-form .input-group-prepend-img{
     width:250px;
 }
-#add-item-form  ,#edit-food-items-form,#edit-user-form{
-    min-height:500px;
+#add-item-form  ,#edit-food-items-form,#edit-user-form,#add-ingredients-form,#edit-ingredients-form{
+    height:500px;
     min-width: 400px;
     padding: 30px;
 }
 .add-items-card ,.edit-items-card,.edit-user-profile-card{
     border-radius: 25px;
-    max-width: 500px;
+    width: 500px;
+    height: 600px;
 }
 
 .addItem-card-header , .edit-Item-card-header,.edit-user-card-headerm{
@@ -244,7 +244,10 @@ body {
 .ItemNameCol{
     width: fit-content;
 }
-
+.edit-items-column{
+   
+    overflow-y: auto;
+}
 
 .recipecolumn {
     max-height: 80vh;
@@ -273,6 +276,11 @@ body {
     margin:10px;
     border-radius: 25px;
 }
+.Ingredientcard{
+    width: 18rem;
+    margin:10px;
+    border-radius: 25px;
+}
 .allItem-card-header,.edit-user-card-header{
     border-top-left-radius: 25px !important;
     border-top-right-radius: 25px !important;
@@ -280,4 +288,15 @@ body {
 .availabilityRow{
     height: 50px;
 }
-
+.common-container{
+    height: 100vh;
+    overflow-y: auto;
+}
+.tableRowLg{
+    height: 83vh;
+}
+.table-header-lg{
+    position: sticky;
+    top:0;
+    height:40px;
+}
