--- a/view/style/colors.css
+++ b/view/style/colors.css
@@ -1,13 +1,12 @@
-body{
-    background-color:#CEDBDC ;
-}
+
 .table-header,.addItem-card-header,.edit-Item-card-header,.edit-user-card-header,.allItem-card-header{
     background-color: #001F3F;
     color: #FFFFFF;
 }
+
 .custom-outline-button {
-    color: #001F3F; /* Text color */
-    border-color: #001F3F; /* Outline color */
+    color: #ece2e2; /* Text color */
+    border-color: #ece2e2; /* Outline color */
 }
 .back-btn{
     color: #001F3F; /* Text color */
@@ -41,8 +40,8 @@ body{
     color:black !important;
 }
 
- .offcanvas, .modal-body{
-    background-color: #CEDBDC;
+ .modal-body{
+    background-color:#ece2e2 ;
     
 }
 .modal-header{
@@ -64,6 +63,15 @@ body{
     background-color: #001F3F; /* Background color on hover */
     color: #FFFFFF; 
 }
+
+.navbar-header{
+    background: radial-gradient(circle, rgba(143,175,200,1) 0%, rgba(79,144,149,1) 0%, rgba(35,26,43,1) 0%);
+     color: white;
+}
+.searchBarRow{
+background: white;
+}
+
 
 
 
