--- a/view/style/style.css
+++ b/view/style/style.css
@@ -8,8 +8,8 @@
         border-radius: 5px;
       }
       ::-webkit-scrollbar-thumb {
-        background: #766c7f; 
-        border-radius: 10px;
+        background:#43394d ;
+           border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #001F3F; 
@@ -143,7 +143,6 @@ textarea{
     z-index: 1;
 }
 .searchBarRow{
-    background-color: #CEDBDC;
     position: sticky;
     top:0;
     z-index: 1;
@@ -276,10 +275,27 @@ textarea{
     margin:10px;
     border-radius: 25px;
 }
+.orders-card,.refillRequestCard{
+    width: 19rem;
+    max-height: 500px;
+    margin:10px;
+    border-radius: 25px;
+    overflow-y: auto;
+}
 .Ingredientcard{
     width: 18rem;
     margin:10px;
     border-radius: 25px;
+}
+.refillRequestCard{
+    width: 18rem;
+    margin:10px;
+    border-radius: 25px;
+    overflow-x: hidden;
+}
+.stockrequests-container,.orders-container{
+    height: 70vh;
+    overflow-y: auto;
 }
 .allItem-card-header,.edit-user-card-header{
     border-top-left-radius: 25px !important;
@@ -292,6 +308,7 @@ textarea{
     height: 100vh;
     overflow-y: auto;
 }
+
 .tableRowLg{
     height: 83vh;
 }
@@ -300,3 +317,42 @@ textarea{
     top:0;
     height:40px;
 }
+.dashboard-container{
+    height: calc(100vh - 70px);
+    overflow-y: auto;
+}
+
+.dashboardCard{
+    height: 100%;
+    border-radius: 10px;
+}
+
+.dashboardcol{
+    min-height:100%;
+}
+.navbar-header{
+    height:70px;
+}
+
+.card-title-row{
+    margin-left:20px;
+    margin-top:20px;
+}
+
+.dashboardTitle,.totalSalesAmount{
+font-weight: bold;
+}
+.salesChartRow {
+    padding-left:15px
+}
+.totalSalesAmount{
+    margin-left: 50px;
+}
+.TotalSalesCard{
+    width: 100%;
+}
+.dashboardChartRow{
+    margin-top: 10px;
+}
+
+    
