--- a/view/style/colors.css
+++ b/view/style/colors.css
@@ -3,7 +3,16 @@
     background-color: #001F3F;
     color: #FFFFFF;
 }
-
+.cashierCatCard{
+    background-color: #001F3F; 
+}
+.cashierCatCard:hover{
+    background: radial-gradient(circle, rgba(143,175,200,1) 0%, rgba(79,144,149,1) 0%, rgba(35,26,43,1) 0%);
+ 
+}
+.cashierCatCard a{
+    color: #FFFFFF;  
+}
 .custom-outline-button {
     color: #ece2e2; /* Text color */
     border-color: #ece2e2; /* Outline color */
@@ -71,7 +80,10 @@
 .searchBarRow{
 background: white;
 }
-
+.cart-title{
+    background-color: #001F3F; 
+    color: #FFFFFF;
+}
 
 
 
