--- a/view/style/style.css
+++ b/view/style/style.css
@@ -6,10 +6,14 @@
     ::-webkit-scrollbar-track {
         box-shadow: inset 0 0 5px grey; 
         border-radius: 5px;
+        margin-top: 20px;
+    margin-bottom: 20px;
+       
       }
       ::-webkit-scrollbar-thumb {
         background:#43394d ;
            border-radius: 10px;
+           
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #001F3F; 
@@ -17,6 +21,9 @@
       .swal2-popup {
         background-color: #001F3F;
         color: white;
+    }
+    ::-webkit-progress-bar {
+        height:300px;
     }
       
 }
@@ -147,6 +154,7 @@ textarea{
     top:0;
     z-index: 1;
 }
+
 .ItemNameRow{
     position: sticky;
     top:0;
@@ -202,6 +210,12 @@ textarea{
 }
 .list-row{
     margin-top: 20px;
+}
+.cardDetailsRow{
+    min-height: 80px;
+}
+.card-text{
+    font-weight: bold;
 }
 
 #add-item-form .input-group ,#edit-food-items-form .input-group ,#add-ingredients-form .input-group,#edit-ingredients-form .input-group{
@@ -265,7 +279,7 @@ textarea{
     overflow-y: auto;
     top: 0;
     z-index: 1;
-    max-height: 90vh;
+    height: 85vh;
     width:100%;
     margin: 0;
     
@@ -275,6 +289,24 @@ textarea{
     margin:10px;
     border-radius: 25px;
 }
+.FoodItemCashiercard{
+    width: 15rem;
+    margin:5px;
+    border-radius: 25px;
+}
+
+.cashierCatCard{
+    width: 12rem;
+    border-radius: 25px;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.cashierCatCard a{
+    text-decoration: none;
+}
+
+
 .orders-card,.refillRequestCard{
     width: 19rem;
     max-height: 500px;
@@ -354,5 +386,94 @@ font-weight: bold;
 .dashboardChartRow{
     margin-top: 10px;
 }
+.customerPendingorderList{
+    overflow-x: auto;
+    max-height: 74vh;
+    width: 190px;
+    margin-left: 20px !important;
+}
 
-    
+.pending-order-btns{
+    min-width: 130px;
+    min-height:140px;
+}
+#fooditems-container{
+    margin: 0;
+    overflow-x: auto;
+    z-index: 1;
+    max-height: 74vh;
+}    
+.ordersAndItemsRow{
+    height: 90vh;
+}
+.cart{
+    max-height: 90vh;
+}
+.cashierCategoryRow ,#fooditems-container,.customerPendingorderList{
+    background-color: #ffffff; 
+    border: 1px solid #d0d0d0; 
+    border-radius: 8px;
+    padding: 15px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    margin: 10px;
+}
+.cart{
+    background-color: #ffffff; 
+    border: 1px solid #d0d0d0; 
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    margin: 10px;
+    overflow-y: auto;
+}
+.cart-title {
+ border-top-left-radius: 8px;
+ border-top-right-radius: 8px;
+}
+.card{
+    border: 1px solid #d0d0d0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
+.cartcustomerDetailscard{
+    border: 1px solid #d0d0d0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    max-width: 280px;
+    padding: 10px;
+}
+.cartcustomerDetailscard .input-group-prepend {
+    width: 100px;
+}
+.Discountcard{
+    border: 1px solid #d0d0d0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    max-width: 280px;
+    padding: 10px;
+}
+.cartItemsCard {
+    border: 1px solid #d0d0d0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    max-width: 280px;
+    max-height: 290px;
+    padding: 10px;
+    overflow-y: auto;
+}
+.cartItem{
+    border: 1px solid #d0d0d0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #f6f1f1;
+    padding:5px;
+}
+#discountName{
+    width: 100px;
+    margin-left: 20px;
+}
+.pricecol{
+    height:23px;
+}
+.cashier-container{
+    height:calc(100vh-70px);
+    overflow-y: auto;
+}
