--- a/view/style/style.css
+++ b/view/style/style.css
@@ -51,7 +51,13 @@ textarea{
 
 .strong-password {
     color: green;
+
 }
+.card-img-top{
+    max-height: 100px;
+    min-height: 100px;
+}
+
  .offcanvas-body a {
     text-decoration: none;
 }
@@ -307,6 +313,17 @@ textarea{
     border-radius: 25px;
     max-height: 400px;
 }
+.RequestCard{
+    width: 18rem;
+    margin:10px;
+    border-radius: 25px;
+    max-height: 400px;
+    min-height: 400px;
+}
+.RequestCard .btn-outline-danger{
+   margin-right: 20px;
+}
+
 .Otheritemscard{
     width: 18rem;
     margin:10px;
@@ -364,9 +381,13 @@ textarea{
     max-height: 400px;
     border-radius: 25px;
 }
+.FoodItemCashiercard img{
+    max-height: 100px;
+}
 .refillRequestCard{
     width: 18rem;
     margin:10px;
+    min-height: 400px;
     border-radius: 25px;
     overflow-x: hidden;
 }
